--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="mongodb://localhost:27017/QUIZO"
+DATABASE_URL=mongodb+srv://bcmchayanroy_db_user:H0CT5sLmt0sXSGoq@cluster0.piqswut.mongodb.net/ecomApp?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 SALT=10
 JWT_TOKEN_SECRET_KEY=4534fsdfsdgfhfghe5
