--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
   }
