--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@reduxjs/toolkit": "^2.9.0",
     "@types/react-native-snap-carousel": "^3.8.12",
     "expo": "~54.0.10",
     "expo-constants": "~18.0.9",
@@ -41,7 +43,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
