--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.8",
     "@reduxjs/toolkit": "^2.9.0",
     "@types/react-native-snap-carousel": "^3.8.12",
+    "axios": "^1.12.2",
     "expo": "~54.0.10",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
@@ -44,6 +45,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "react-redux": "^9.2.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
